# code_from_gitee

./: .gitignore  CMakeLists.txt  monitor.sh  package-lock.json
assets/css/: style.css
assets/html/: index.html
assets/js/: script.js
data/: data.json  words.txt
data/users/: test_user.json  tzz.json  tzz2.json  wzy.json
include/: FileUtils.h  HttpServer.h  UserAuth.h  UserDataManager.h  WordApp.h  version.h
listen/: CLICK_FEATURE.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  build.sh  index.html  install_deps.sh  run.sh  server.py  word_reader  word_reader.cpp
src/: FileUtils.cpp  HttpServer.cpp  UserAuth.cpp  UserDataManager.cpp  WordApp.cpp  main.cpp
src/core/: WordApp.cpp
